<resources>
    <string name="app_name">ArticleView</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serach_text">search...</string>
    <string name="search_hint">type smth to search</string>
    <string name="add_new_article">Add New Article</string>
    <string name="view_article">View</string>
    <string name="edit_article">Edit</string>
    <string name="need_published">need publish?</string>
    <string name="published">publish</string>
    <string name="save">Save Article</string>
    <string name="expandable_list">Show Groups</string>
    <string name="simple_list">Hide Groups</string>
    <string name="snackbar_article_text">Articles request failed</string>
    <string name="snackbar_action">Try Again</string>
    <string name="snackbar_group_text">Categories request faild</string>
    <string name="snackbar_article_save_text">Save article request failed</string>
    <string name="snackbar_new_article">New Article has created</string>
    <string name="scnakbar_ok">OK</string>
    <string name="snackbar_article_save_success_text">Article updated</string>
    <string name="snackbar_cancel">Cancel</string>
    <string name="dialog_message">WARNING! This action can not be canceled!</string>
    <string name="dialog_title">Are you really want to delete Article?</string>
    <string name="snackbar_delete_text">Delete request failed</string>
    <string name="something_goes_wrong">Sorry! Something goes wrong, try to repeat the operation, or rerun app.</string>
    <string name="snackbar_operation_success">Operation has sucussefull processed</string>
</resources>
