<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.vk.fesswod.articleView.fragment.FragmentArticleDetail"
              android:padding="20dp">
    <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/primary_dark">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_article"
                android:id="@+id/buttonView"
                android:textColor="@color/icons"
                android:background="@color/primary"/>

            <Button
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_article"
                android:id="@+id/buttonEdit"
                android:textColor="@color/icons"
                android:background="@color/primary"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LinearLayout_editLayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextArticleName"
                    android:maxLines="1"
                    android:layout_gravity="center_horizontal"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:maxLines="10"
                    android:id="@+id/editTextArticleContent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4.28"
                    android:minHeight="200dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerArticleGroup"
                    android:layout_gravity="center_horizontal"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/published"
                        android:textColor="@color/primary_text"
                        android:id="@+id/switchPublished"/>

                    <TextView
                        android:textColor="@color/secondary_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/need_published"
                        android:id="@+id/textViewPublishText"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewThumb"
                    android:minHeight="150dp"
                    android:background="@color/primary"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_horizontal"
                    />
                <android.support.design.widget.FloatingActionButton
                    app:fabSize="mini"

                    android:id="@+id/floatingButtonAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons"
                    app:elevation="4dp"
                    app:borderWidth="0dp"
                    android:layout_alignTop="@+id/imageViewThumb"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
            </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/icons"
            android:background="@color/primary"
            android:id="@+id/buttonSaveArticle"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>